--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -82,7 +82,7 @@
                 <div class="profile-text">
                     <div class="name-profile">
                         <p class="bio-desc1">Hello, I'm</p>
-                    <p class="bio-desc2">M. Saim <span>Arif</span></p>
+                        <p class="bio-desc2">M. Saim <span>Arif</span></p>
                     </div>
                     
                     <p class="bio-desc3">HTML Email Developer/Content Editor</p>
@@ -102,10 +102,6 @@
                 <!-- <div class="img-container">
                     <img class="profile-img" src="img/IMG_6572.jpg"/>
                 </div> -->
-                <!-- <main>
-                <div id="container3D"></div>
-                </main> -->
-
             </div>
 
 
@@ -473,7 +469,31 @@
 
     
 
-    <div class="spacer layer2"></div>
+    <!-- <div class="spacer layer2"></div> -->
+    <footer>
+        <div class="waves">
+            <div class="wave" id="wave1"></div>
+            <div class="wave" id="wave2"></div>
+            <div class="wave" id="wave3"></div>
+            <div class="wave" id="wave4"></div>
+        </div>
+        <ul class="social-icon">
+            <li>
+                <a href="#"><ion-icon name="logo-linkedin"></ion-icon></a>
+            </li>
+            <li>
+                <a href="#"><ion-icon name="logo-github"></ion-icon></a>
+            </li>        
+        </ul>
+
+        <ul class="menu">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Skills</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Portfolio</a></li>
+        </ul>
+        <p>@2023 Saim Arif</p>
+    </footer>
 
 <script>
 
