--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -373,9 +373,9 @@
 
         </section>
 
-        <div class="spiral" >
+        <!-- <div class="spiral" >
             <img src="img-com/blue-swil.png" data-aos="rotate-ac"/>
-        </div>
+        </div> -->
 
 
 
@@ -411,6 +411,9 @@
                                             <div class="project-title" id="project-title1">
                                                 Apple Newsletter Email
                                             </div>
+                                            <div class="github-link">
+                                                <a href="https://github.com/muhammadarif2113/apple-newsletter-email"><ion-icon name="logo-github"></ion-icon></a>
+                                            </div>
                                             <a href="/Apple Newsletter.html">
                                                 <i class="fas fa-long-arrow-alt-right"></i>
                                             </a>
@@ -434,6 +437,9 @@
                                             <div class="project-title" id="project-title2">
                                                 MyProtein Transactional Email 
                                             </div>
+                                            <div class="github-link">
+                                                <a href="https://github.com/muhammadarif2113/transactional-email"><ion-icon name="logo-github"></ion-icon></a>
+                                            </div>
                                             <a href="https://muhammadarif2113.github.io/transactional-email/">
                                                 <i class="fas fa-long-arrow-alt-right"></i>
                                             </a>
@@ -453,6 +459,9 @@
                                             </div>
                                             <div class="project-title" id="project-title3">
                                                 Airline Promotional Email
+                                            </div>
+                                            <div class="github-link">
+                                                <a href="https://github.com/muhammadarif2113/airline-promo-email"><ion-icon name="logo-github"></ion-icon></a>
                                             </div>
                                             <a href="https://muhammadarif2113.github.io/airline-promo-email/">
                                                 <i class="fas fa-long-arrow-alt-right"></i>
@@ -477,6 +486,9 @@
                                             <div class="project-title" id="project-title4">
                                                 NBA Store Promotional Email
                                             </div>
+                                            <div class="github-link">
+                                                <a href="https://github.com/muhammadarif2113/nbastore-promo-email"><ion-icon name="logo-github"></ion-icon></a>
+                                            </div>
                                             <a href="https://muhammadarif2113.github.io/nbastore-promo-email/">
                                                 <i class="fas fa-long-arrow-alt-right"></i>
                                             </a>
@@ -499,6 +511,9 @@
                                             <div class="project-title" id="project-title5">
                                                 E-Commerce Store
                                             </div>
+                                            <div class="github-link">
+                                                <a href="https://github.com/muhammadarif2113?tab=repositories"><ion-icon name="logo-github"></ion-icon></a>
+                                            </div>
                                             <a href="http://nyckiqs.live/">
                                                 <i class="fas fa-long-arrow-alt-right"></i>
                                             </a>
@@ -517,6 +532,9 @@
                                             </div>
                                             <div class="project-title" id="project-title6">
                                                 E-Commerce Store
+                                            </div>
+                                            <div class="github-link">
+                                                <a href="https://github.com/muhammadarif2113?tab=repositories"><ion-icon name="logo-github"></ion-icon></a>
                                             </div>
                                             <a href="http://nyckiqs.live/">
                                                 <i class="fas fa-long-arrow-alt-right"></i>
@@ -547,18 +565,18 @@
         </div>
         <ul class="social-icon">
             <li>
-                <a href="#"><ion-icon name="logo-linkedin"></ion-icon></a>
+                <a href="https://www.linkedin.com/in/muhammad-arif-2a9784163/"><ion-icon name="logo-linkedin"></ion-icon></a>
             </li>
             <li>
-                <a href="#"><ion-icon name="logo-github"></ion-icon></a>
+                <a href="https://github.com/muhammadarif2113?tab=repositories"><ion-icon name="logo-github"></ion-icon></a>
             </li>        
         </ul>
 
         <ul class="menu">
             <li><a href="#">Home</a></li>
-            <li><a href="#">Skills</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Portfolio</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#projects">Portfolio</a></li>
         </ul>
         <p>@ 2023 Saim A.</p>
     </footer>
