phone view changes

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -37,7 +37,7 @@
         <div class="content-area"> 
             <header class="nav-header">
                 <a class="nav-logo" href="http://127.0.0.1:5500/index.html">
-                    <img src="img-com/Saim.Dev-5 (1).png" />
+                    <img class="float-hr" src="img-com/Saim.Dev-5 (1).png" />
                 </a>
                 <div class="navigation">
                     <ul>
