--- a/portfolio/business-kit-news-v3.html
+++ b/portfolio/business-kit-news-v3.html
@@ -4,6 +4,15 @@
     style="background:#f2f2ed!important;box-sizing:border-box">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YG2FQC8W1C"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-YG2FQC8W1C');
+    </script>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Business Kit News V3</title>
