--- a/portfolio/business-kit-v1.html
+++ b/portfolio/business-kit-v1.html
@@ -3,6 +3,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en" style="background:#f2f2ed!important">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YG2FQC8W1C"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-YG2FQC8W1C');
+    </script>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Business Kit V1</title>
@@ -44,6 +53,7 @@
         }
     </style>
 </head>
+
 <nav>
     <ul style="display: flex; justify-content: center; list-style: none;">
         <li style="padding: 20px;"> <a href="/business-kit-v1.html">Template 1</a></li>
