new google analytics

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YG2FQC8W1C"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-773B7GJNL2"></script>
     <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-        gtag('config', 'G-YG2FQC8W1C');
+    gtag('config', 'G-773B7GJNL2');
     </script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
