project details alignment

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -7,7 +7,6 @@
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-
     gtag('config', 'G-773B7GJNL2');
     </script>
     <meta charset="UTF-8">
@@ -398,7 +397,7 @@
                             </div>
                             <div class="github-link">
                                 <a href="https://github.com/muhammadarif2113/apple-newsletter-email"><ion-icon
-                                        name="logo-github"></ion-icon></a>
+                                        name="logo-github" id="github1"></ion-icon></a>
                             </div>
                             <a href="/Apple Newsletter.html">
                                 <i class="fas fa-long-arrow-alt-right"></i>
@@ -426,7 +425,7 @@
                             </div>
                             <div class="github-link">
                                 <a href="https://github.com/muhammadarif2113/transactional-email"><ion-icon
-                                        name="logo-github"></ion-icon></a>
+                                        name="logo-github" id="github2"></ion-icon></a>
                             </div>
                             <a href="https://muhammadarif2113.github.io/transactional-email/">
                                 <i class="fas fa-long-arrow-alt-right"></i>
@@ -453,7 +452,7 @@
                             </div>
                             <div class="github-link">
                                 <a href="https://github.com/muhammadarif2113/airline-promo-email"><ion-icon
-                                        name="logo-github"></ion-icon></a>
+                                        name="logo-github" id="github3"></ion-icon></a>
                             </div>
                             <a href="https://muhammadarif2113.github.io/airline-promo-email/">
                                 <i class="fas fa-long-arrow-alt-right"></i>
@@ -479,7 +478,7 @@
                             </div>
                             <div class="github-link">
                                 <a href="https://github.com/muhammadarif2113/nbastore-promo-email"><ion-icon
-                                        name="logo-github"></ion-icon></a>
+                                        name="logo-github" id="github4"></ion-icon></a>
                             </div>
                             <a href="https://muhammadarif2113.github.io/nbastore-promo-email/">
                                 <i class="fas fa-long-arrow-alt-right"></i>
