--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -51,7 +51,7 @@
         <div class="content-area">
             <header class="nav-header">
                 <a class="nav-logo" href="https://saimdev.com/">
-                    <img class="float-hr" src="img-com/Saim.Dev-5 (1).png" />
+                    <img src="img-com/Saim.Dev-5 (1).png" />
                 </a>
                 <div class="navigation">
                     <ul>
